--- a/src/viewer/potree.css
+++ b/src/viewer/potree.css
@@ -147,6 +147,7 @@
 	background:		none;
 	width:			2.5em;
 	height:			2.5em;
+	max-width:  unset;
 	z-index:		100;
 	cursor: 		pointer;
 	margin:			4px;
@@ -185,11 +186,6 @@
 
 .potree-panel-heading{
 	background-color: var(--bg-dark-color);
-}
-
-a:hover, a:visited, a:link, a:active{
-	color: 				#ccccff;
-	text-decoration: 	none;
 }
 
 .annotation{
@@ -315,15 +311,6 @@ canvas {
 	height: 100% 
 }
 
-body{ 
-	margin: 	0; 
-	padding: 	0;
-	position:	absolute;
-	width: 		100%;
-	height: 	100%;
-	overflow:	hidden;
-}
-
 .axis {
   font: 		10px sans-serif;
   color: 		var(--font-color);
@@ -399,6 +386,12 @@ body{
 
 .pv-menu-list > *{
 	margin: 	4px 20px;
+}
+
+.pv-menu-list #tools, .pv-menu-list #clipping_tools, .pv-menu-list #navigation {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem 0.5rem;
 }
 
 .ui-slider {
