:lipstick: Max-w unset for imgs from table container

--- a/src/viewer/potree.css
+++ b/src/viewer/potree.css
@@ -364,6 +364,10 @@ canvas {
 	text-align: center;
 }
 
+.coordinates_table_container table td img {
+	max-width: unset;
+}
+
 #scene_object_properties{
 	margin:		0px;
 }
